# mujoco-torch

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  NOTICE  PERFORMANCE.md  README.md  RELEASE.md  REVIEW.md  bench_final_compile.json  bench_final_compile_hum.json  bench_final_h4.json  bench_final_h4_hum.json  bench_final_loop.json  bench_final_loop_hum.json  bench_final_mjx.json  bench_final_mjx_hum.json  bench_final_mujoco_c.json  bench_final_mujoco_c_hum.json  bench_final_reduce.json  bench_final_reduce_hum.json  bench_final_vmap.json  bench_final_vmap_hum.json  bench_fork_ant.json  bench_fork_humanoid.json  bench_full.json  bench_hum_compile.json  bench_hum_h4.json  bench_hum_reduce.json  bench_hum_vmap.json  bench_humanoid_fix.json  bench_merged_v2.json  bench_phase1.py  bench_phase2.py  bench_reduce_overhead.json  bench_unbatched_tensor.json  diff_functorch.txt  diff_meta_utils.txt  diff_while_loop.txt  gpu_bench.py  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md
TODO/: 01-fix-inverse-dynamics.md  02-readme.md  03-compile-bugs.md  03-condim-1-frictionless.md  04-pyproject-toml.md  05-filterexact-dyntype.md  06-inverse-dynamics-test.md  07-hfield-collision.md  08-instantiate-friction.md  09-precommit-hooks.md  10-notice-file.md  11-condim-4-6.md  12-publish-benchmarks.md  13-gpu-benchmarks.md  14-rl-integration-example.md  15-muscle-actuator.md  16-more-test-models.md  17-solver-humanoid-robustness.md  18-elliptic-cone.md  19-visualization-story.md  20-contributing-guide.md  21-gpu-ci.md  22-numpy-to-pytorch.md  23-remove-local-imports.md  24-perf-optimization.md  26-unbatched-tensor-clone-overhead.md  fix-humanoid-contact-filtering.md  physics-blowup-degenerate-states.md  small-cholesky-followup.yml
benchmarks/: _helpers.py  bench_compile.py  bench_compile_time.py  bench_loop.py  bench_mjx.py  bench_mujoco_c.py  bench_step.py  bench_vmap.py  bench_warp.py  conftest.py  plot_bench.py
examples/: batched_comparison.py  bench_all.py  bench_all_to_plot.py  bench_throughput.py  e2e_comparison.py  gymnasium_example.py  humanoid_accuracy_test.py  policy_viewer_example.py  probe_recompile_gpu5.py  probe_recompile_matrix.py  probe_unbatched_expand.py  probe_unbatched_vmap.py  profile_collector.py  run_all.sh  run_all_extensions.sh  satellite_video.py  satellite_video_torchrl.py  shac_loss.py  torchrl_example.py  train_direct.py  train_direct_humanoid.py  train_direct_humanoid_rich.py  train_ppo.py  train_sac.py  train_shac_humanoid_rich.py  viewer_example.py
mujoco_torch/: __init__.py
scratch/: plot_bench.py
scripts/: dump_output_code.py
zoo/: ant.py  (+11 more)
(+84 files in other folders)
